[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-probesite"
version = "0.1.1"
description = "Synthetic uptime and Playwright checks exported to Prometheus"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "ops", "probesite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/probesite"

[project.scripts]
"probesite-emit" = "probesite.connect:emit_main"
probesite = "probesite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["probesite"]
